# AgenticAI

./: README.md  pyproject.toml  report.md
agentic_ai_poc_bedrock/: DataAnalystreport.md  README.md  alembic.ini  pyproject.toml
agentic_ai_poc_bedrock/knowledge/: user_preference.txt
agentic_ai_poc_bedrock/output/: FinalAnalystReport.md  causalinference_Report.md  eda_Report.md  statistical_Report.md  visualization_Report.md
agentic_ai_poc_bedrock/src/agentic_ai_poc_bedrock/: crew.py  main.py
agentic_ai_poc_bedrock/src/agentic_ai_poc_bedrock/config/: agents.yaml  tasks.yaml
agentic_ai_poc_bedrock/src/agentic_ai_poc_bedrock/tools/: custom_tool.py
output/: FinalAnalysis_Report.md  causalinference_Report.md  dataIngestion_Report.md  visualization_Report.md
src/agentic_ai_poc_bedrock/: CodeBlocks.py  crew.py  main.py
src/agentic_ai_poc_bedrock/config/: agents.yaml  tasks.yaml
src/agentic_ai_poc_bedrock/tools/: custom_tool.py
