[project]
name = "agentic_ai_poc_bedrock"
version = "0.1.0"
description = "agentic_ai_poc_bedrock using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "boto3>=1.38.32",
    "crewai[tools]>=0.126.0,<1.0.0",
    "ironpdf>=2025.6.1.5",
    "mdpdf>=0.0.18",
    "spire>=0.4.2",
]

[project.scripts]
agentic_ai_poc_bedrock = "agentic_ai_poc_bedrock.main:run"
run_crew = "agentic_ai_poc_bedrock.main:run"
train = "agentic_ai_poc_bedrock.main:train"
replay = "agentic_ai_poc_bedrock.main:replay"
test = "agentic_ai_poc_bedrock.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
